testsuite/bsc.evaluator/undefined/AbstractDeriveType.bsv
(* synthesize *)
module mkAbstractDeriveType();
   Type t = ?;
   messageM(printType(t));
endmodule
